# project-manager

./: .gitignore  Cargo.toml  README.md  example.env  issues.sqlite  test_database.sqlite
.github/workflows/: test_app.yml
actions/: Cargo.toml
actions/src/: lib.rs
actions/src/get/: issues.rs  mod.rs  repos.rs  users.rs
client/: package.json  pnpm-lock.yaml  vite.config.ts
client/src/: App.tsx
entity/: Cargo.toml
entity/src/: comment.rs  issue.rs  lib.rs  owner.rs  prelude.rs  repository.rs
frontend/: Cargo.toml  index.html
frontend/public/: glue.js
frontend/src/: main.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20221106_182043_create_owner_table.rs  m20221106_182552_create_comment_table.rs  m20221106_182605_create_issue_table.rs  m20221111_162451_create_repository_table.rs
src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/models/: id_type_macro.rs  issue.rs  mod.rs  repos.rs  user.rs
src/actions/: get_actions.rs  mod.rs
src/entities/: comment.rs  issue.rs  mod.rs  owner.rs
tests/: Cargo.toml  get_current_user_test.rs  get_issues_test.rs  get_repos_test.rs  migration_enum_schema_test.rs  ui_test.rs
tests/utils/: mod.rs
ui/: Cargo.toml
ui/src/: app.rs  lib.rs
