[package]
name = "issue-manager"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
  ".",
  "migration",
]

[dependencies]
migration = { path = "migration" }
tui = "0.19.0"
futures = "0.3"
sea-orm = { version = "^0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
tokio = { version = "1", features = ["full"] }
