[package]
name = "issue-manager"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
  ".",
  "migration",
  "entity",

  "tests"
]

[dependencies]
migration = { path = "migration" }
entity = { path = "entity" }
tui = "0.19.0"
futures = "0.3"
sea-orm = { version = "0.10.2", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
tokio = { version = "1", features = ["full"] }
