[package]
name = "tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
migration = { path = "../migration" }
entity = { path = "../entity" }

[[test]]
name = "migration_enum_schema_test"
path = "migration_enum_schema_test.rs"
