[package]
name = "tests"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
actions = { path = "../actions" }
ui = { path = "../ui" }
tokio = { version = "1", features = ["full"] }
tui = "0.19"
octocrab = "0.17.0"

[[test]]
name = "get_issues_test"
path = "get_issues_test.rs"

[[test]]
name = "get_current_user_test"
path = "get_current_user_test.rs"

[[test]]
name = "get_repos_test"
path = "get_repos_test.rs"

[[test]]
name = "ui_test"
path = "ui_test.rs"
